--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": ["react", "starter"],
   "main": "src/index.js",
   "dependencies": {
+    "gh-pages": "2.2.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-scripts": "3.0.1"
@@ -18,5 +19,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
 }
