--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build"
   },
   "homepage": "https://erislandio.github.io/challenge/",
   "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
