--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "react",
   "version": "1.0.0",
   "description": "React example starter project",
-  "keywords": ["react", "starter"],
+  "keywords": [
+    "react",
+    "starter"
+  ],
   "main": "src/index.js",
   "dependencies": {
     "gh-pages": "2.2.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-icons": "^3.9.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1"
   },
   "devDependencies": {
@@ -22,5 +27,10 @@
     "deploy": "gh-pages -d build"
   },
   "homepage": "https://erislandio.github.io/challenge/",
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
